feat(api): :sparkles: create route to get settings
