# apps/api/src/app/modules/settings/errors/settings-not-found.ts
@@ -2,6 +2,6 @@ import { AppError } from "@application/errors/app-error";
 
 export class SettingsNotFound extends AppError {
 	constructor() {
-		super("Settings not found", 404);
+		super("Settings Not Found", 404);
 	}
 }
