# apps/api/src/factories/services/settings/getByUserId.ts
@@ -1,0 +1,6 @@
+import { GetByUserService } from "@application/modules/settings/services/getByUser";
+import { makeSettingsRepository } from "@factories/repositories/settings";
+
+export function makeGetSettingsByUserService() {
+	return new GetByUserService(makeSettingsRepository());
+}
